Added Refresh time featurettes (content under construction).

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -246,12 +246,12 @@
               <ul class="list-unstyled mt-2 mb-2">
                 <li><div><input type="checkbox" id="changing-pad-checkbox"><span> </span><a href="#changing-pad">Changing pad</a></div></li>
                 <li><div><input type="checkbox" id="pad-cover-checkbox"><span> </span><a href="#pad-cover">Changing pad cover</a></div></li>
-                <li><div><input type="checkbox" id="waterproof-pads-checkbox"><span> </span><a href="#waterproof-pads">Waterproof pads</a></div></li>
-                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers-newborn">Diapers - size Newborn</a></div></li>
-                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers-1">Diapers - size 1</a></div></li>
+                <li><div><input type="checkbox" id="waterproof-pads-checkbox"><span> </span><a href="#waterproof-mats">Waterproof mats</a></div></li>
+                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers">Diapers - size Newborn</a></div></li>
+                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers">Diapers - size 1</a></div></li>
                 <li><div><input type="checkbox" id="wipes-checkbox"><span> </span><a href="#wipes">Baby wipes</a></div></li>
-                <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-holder"><i> Optional: wipe holder</i></a></div></li>
-                <li><div><input type="checkbox" id="diaper-cream-checkbox"><span> </span><a href="#diaper-cream">Diaper rush ointment</a></div></li>
+                <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-tub"><i> Optional: wipe holder</i></a></div></li>
+                <li><div><input type="checkbox" id="diaper-cream-checkbox"><span> </span><a href="#diaper-cream">Diaper rash ointment</a></div></li>
                 <li><div><input type="checkbox" id="diaper-pail-checkbox"><span> </span><a href="#diaper-pail">Diaper pail</a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-diper-pants.svg" height="64px" alt="Diaper Icon">
@@ -727,6 +727,8 @@
 
       <hr class="featurette-divider">
 
+      <!-- Content under construction -->
+
       <div class="row featurette">
         <div class="col-lg-7 order-lg-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="burp-cloths"></span>Burp cloths... any kind of cloths!</h2>
@@ -751,6 +753,127 @@
         </div>
         <div class="col-lg-5 text-center">
           <img class="img-fluid f-image-size" src="../static/img/MotherloveNippleCream.jpg" alt="Motherlove Nipple Cream 1 oz">
+        </div>
+      </div>
+
+      <!-- Refresh Time -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="changing-pad"></span>Changing pad: <span class="text-muted">with changing table or without</span></h2>
+          <p class="lead">Under construction.</p> 
+          <p class="lead on-one-line"><span class="font-weight-bold">Summer Infant Contoured Changing Pad:</span> $22.99</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B009EDSWJA', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/SummerInfantChangingPad.jpg" class="img-fluid f-image-size" alt="Summer Infant Contoured Changing Pad">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="pad-cover"></span>Changing pad cover</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">COSMOPLUS Stretchy Changing Pad Cover 2-pack:</span> $9.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/COSMOPLUS-Stretchy-Changing-Universal-Standard/dp/B07G5FSKXX', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/CosmoplusChangingPadCover.jpg" alt="COSMOPLUS Stretchy Changing Pad Cover 2-pack">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="waterproof-mats"></span>Waterproof changing mats</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Monvecle Baby Waterproof Bamboo Changing Mats 4-pack:</span> $11.40, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01M8JHV45', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/MonvecleWaterproofChangingPads.jpg" class="img-fluid f-image-size" alt="Monvecle Baby Waterproof Bamboo Changing Mats 4-pack">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="diapers"></span>Diapers: <span class="text-muted">newborn and size 1</span></h2>
+          <p class="lead">Under construction.</p>
+          <!-- Need to research where to get the best deal for size Newborn -->
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size Newborn:</span> $36.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Huggies-Snugglers-Diapers-Newborn-Packaging/dp/B07MDRNNNZ', '_blank'); return false;">Check it up!</button>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size 1:</span> $39.76, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Munchkin-Steam-Guard-Microwave-Sterilizer/dp/B000V9DXGS', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/HuggiesLittleSnugglersSize1.jpg" alt="Huggies Little Snugglers Baby Diapers, Size 1">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="wipes"></span>Baby wipes</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Natural Care Unscented Baby Wipes, 3 Refill Packs (528 Total Wipes):</span> $12.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/HUGGIES-Natural-Unscented-Sensitive-Refill/dp/B07MVS998P', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/HuggiesNaturalWipes.jpg" class="img-fluid f-image-size" alt="Huggies Natural Care Unscented Baby Wipes, Sensitive, 3 Refill Packs (528 Total Wipes)">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="basket"></span>Reusable tub for wipes</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Natural Care Baby Wipes, Unscented Tub :</span> $2.24, Walmart.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.walmart.com/ip/Huggies-Natural-Care-Baby-Wipes-Unscented-Tub-64-count/19802289', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/HuggiesWipesTub.jpeg" alt="Huggies Natural Care Baby Wipes, Unscented Tub ">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 order-lg-2 mb-4">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="diaper-cream"></span>Diaper rash ointment</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">A+D Original Diaper Rash Ointment, 4 Ounce Tube:</span> $4.52, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Original-Ointment-Protectant-Lanolin-Petrolatum/dp/B01M0WWA2B', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 order-lg-1 text-center">
+          <img src="../static/img/ADDiaperRashOintment.jpg" class="img-fluid f-image-size" alt="A+D Original Diaper Rash Ointment, 4 Ounce Tube">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="diaper-pail"></span>Diaper pail</h2>
+          <p class="lead">Under construction.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Ubbi Steel Diaper Pail</span> $79.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B0082AWSQ4?colid=56A464U0PO2', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/UbbiDiaperPail.jpg" alt="Ubbi Steel Diaper Pail Light Blue">
         </div>
       </div>
 
