Fixed prices and links in featurettes. Added prices to Excel database.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -326,7 +326,7 @@
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="blanket"></span>Blanket: <span class="text-muted">keep her warm!</span></h2>
           <p class="lead">Regardless of what time of the year we’re talking about, it’s a good idea to have a medium warmth blanket handy, even during summer. Because, you know, air conditioners. A blanket is an easy way to add an extra layer to your baby’s outfit, and it’s actually the only safe way to keep your baby warm in a car in colder months. Safety guidelines forbid parents from bundling up little ones in winter coats and parkas when putting them in a car seat, because the straps won’t tighten well enough. You dress the baby into a fleece suit, strap her into the seat and then tuck a blanket on top of it. My family ended up getting a blanket for every car, stroller and place where baby has to spend time at. We had at least five, if not more!</p>
           <p class="lead">The very important piece here – you can’t leave a baby with a blanket unsupervised because of a suffocation risk. That means that you’re either constantly keeping an eye on him or swaddle/tuck the blanket into the car seat nice and snug.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Hudson Baby Super Plush Blanket:</span> $<span id="blanket-price">11.99</span>, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Hudson Baby Super Plush Blanket:</span> $<span id="blanket-price">13.47</span>, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01BGG3I0U', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
@@ -422,11 +422,11 @@
 
       <div>
         <p class="lead">Okay, let’s say I persuaded you to buy onesies and sleep & play suits, but how many? The amount of clothes you need will depend on how messy things will turn out (which you don’t know in advance!) and how often you prefer to do laundry. Onesies and sleep and play suits are often conveniently sold in sets. Get a set of five items each and you are covered for the beginning. If your baby will have a lot of blowouts or reflux, buying extra clothes is not a problem – ask someone to stop by the nearest Walmart or Fred Meyer, they sell baby stuff everywhere now. Otherwise, you might find yourself covered with just those few things. If you decided to follow my advice on getting both Newborn and 0-3 sizes, you’ll need four sets total.</p>
-        <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Girl 5-Pack Bodysuits:</span> $16.80, carters.com<span>  </span></p>
-        <button type="button" class="btn btn-outline-pink btn-sm mb-2" onclick=" window.open('https://www.carters.com/carters-baby-girl-bodysuits', '_blank'); return false;">Check it up!</button>
+        <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Girl 5-Pack Bodysuits:</span> $12.00 with 60% off, carters.com<span>  </span></p>
+        <button type="button" class="btn btn-outline-pink btn-sm mb-2" onclick=" window.open('https://www.carters.com/carters-doorbusters/bodysuits', '_blank'); return false;">Check it up!</button>
         <br>
-        <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Boy Sleep & Plays:</span> $9.00 each, carters.com</p>
-        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-baby-boy-clearance?page=1#prefn1=filter_broad&prefv1=Sleep%20%26%20Plays', '_blank'); return false;">Check it up!</button>
+        <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Boy Sleep & Plays:</span> $8.00 each with 60% off, carters.com</p>
+        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-doorbusters/sleep-and-play', '_blank'); return false;">Check it up!</button>
       </div>
 
       <hr class="featurette-divider">
@@ -435,7 +435,7 @@
         <div class="col-lg-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bath-tub"></span>Baby bath tub</h2>
           <p class="lead">The idea behind an infant tub is that it supports the body of an infant in a recline position making it easier for you to wash her. It doesn’t have to hold a lot of water (danger!) and many of them don’t hold water at all. It’s meant to be either placed in a regular bath tub or in a kitchen sink. This is that sort of an item which is absolutely okay to get used from a friend or OfferUp. Babies outgrow them in a couple of months and the little tub goes into the storage replaced by a bigger one.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Angelcare Baby Bath Support:</span> $12.59, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Angelcare Baby Bath Support:</span> $24.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Angelcare-Baby-Bath-Support-Aqua/dp/B008VWVS14/', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
@@ -465,7 +465,7 @@
         <div class="col-lg-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="towel"></span>Baby bath towel</h2>
           <p class="lead">Honestly, I believe any soft towel would do. Doesn’t have to be big, just enough to wrap the baby into it after a bath. If you’re going to get a new one, they make adorable hooded baby towels with teddy bear ears, etc. Those make great baby shower gifts. I’ve never considered myself a person with a tremendous amount of friends, and I somehow received four baby towels for my little one. Four! I kept two and gifted the other two. Ah, that’s how I got that many… Maybe hold off on this purchase?</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Premium Hooded Baby Towel and Washcloth Gift Set:</span> $27.00, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Premium Hooded Baby Towel and Washcloth Gift Set:</span> $25.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Premium-Hooded-Baby-Towels-Washcloth/dp/B01M1N82R9/', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
@@ -481,7 +481,7 @@
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="washcloths"></span>Baby washcloths<span class="text-muted"></span></h2>
           <p class="lead">Sometimes baby bath towels come in a set with one or two washcloths (like the one I recommended above), but you definitely will need more than that. Washcloths are not only for the bath. They make a great cleaning tool whether it’s a baby face or a baby butt, or your new blouse. Very very handy. I kept them everywhere, including the diaper backpack and the car, etc.  How are baby washcloths different from regular washcloths? Well, they are supposed to be softer, and they are made of nice materials. For example, everyone is raving about bamboo. Interestingly enough, my favorite ones were the plain cheap ones with fairly low rating on Amazon, probably because they are very thin. But I liked them to be thin! I found it much easier to clean small creases on baby body with these, rather than thick bamboo ones.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">Spasilk Washcloths 10 pack:</span> $6.97, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Aveeno-Baby-Shampoo-Natural-Tear-Free/dp/B00767LJYQ/', '_blank'); return false;">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Spasilk-Pack-Soft-Terry-Washcloth/dp/B002LARFQY', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
           <img src="../static/img/SpasilkWashcloths.jpg" class="img-fluid f-image-size" alt="Spasilk Washcloths, Pink Stripes, 10 Count">
@@ -531,9 +531,9 @@
           <!-- Needs re-designing and an image-->
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
           <p class="lead"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Organic-Cotton-Waterproof-Fitted-Crib/dp/B01865W6R0', '_blank'); return false;">Check it up!</button>
           <p class="lead"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Fitted-Toddler-Jersey-Chevron-Elys/dp/B06W5G7KC1', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
           <img src="../static/img/Canton4in1ConvertibleCrib.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
@@ -606,7 +606,7 @@
         <div class="col-lg-7 order-lg-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bassinet"></span>Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
           <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $48.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
@@ -717,7 +717,7 @@
         <div class="col-lg-7 mb-4">
           <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="basket"></span>Dishwasher Basket</h2>
           <p class="lead">OXO also makes cute little dishwasher baskets for bottle parts and accessories which proved to be super useful. Without it you’re guaranteed spending tons of precious time searching for nipples and straws on the bottom of your dishwasher.  The doors of the basket hold up to 8 bottle nipples, which is a good amount. And you can always use it for bob baby-related items as well!</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Munchkin Steam Guard Microwave Sterilizer:</span> $19.99, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Munchkin Steam Guard Microwave Sterilizer:</span> $9.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B0771FFJ21', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
@@ -793,7 +793,7 @@
         <div class="col-lg-7 order-lg-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="waterproof-mats"></span>Waterproof changing mats</h2>
           <p class="lead">Under construction.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Monvecle Baby Waterproof Bamboo Changing Mats 4-pack:</span> $11.40, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Monvecle Baby Waterproof Bamboo Changing Mats 4-pack:</span> $11.48, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01M8JHV45', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
@@ -809,10 +809,10 @@
           <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="diapers"></span>Diapers: <span class="text-muted">newborn and size 1</span></h2>
           <p class="lead">Under construction.</p>
           <!-- Need to research where to get the best deal for size Newborn -->
-          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size Newborn:</span> $36.99, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size Newborn:</span> $39.76, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Huggies-Snugglers-Diapers-Newborn-Packaging/dp/B07MDRNNNZ', '_blank'); return false;">Check it up!</button>
-          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size 1:</span> $39.76, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Munchkin-Steam-Guard-Microwave-Sterilizer/dp/B000V9DXGS', '_blank'); return false;">Check it up!</button>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Little Snugglers Baby Diapers, Size 1:</span> $46.70, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Huggies-Little-Snugglers-Diapers-Packaging/dp/B07MP6VXRN', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
           <img class="img-fluid f-image-size" src="../static/img/HuggiesLittleSnugglersSize1.jpg" alt="Huggies Little Snugglers Baby Diapers, Size 1">
@@ -825,7 +825,7 @@
         <div class="col-lg-7 order-lg-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="wipes"></span>Baby wipes</h2>
           <p class="lead">Under construction.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Natural Care Unscented Baby Wipes, 3 Refill Packs (528 Total Wipes):</span> $12.99, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Huggies Natural Care Unscented Baby Wipes, 3 Refill Packs (528 Total Wipes):</span> $14.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/HUGGIES-Natural-Unscented-Sensitive-Refill/dp/B07MVS998P', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
