Added JS price countera to all items. Adjusted total price. Fixed several id names.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -129,7 +129,7 @@
 
     <section>
       <div class="pricing-header mb-4 text-center">
-        <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Baby Checklist: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1500 value)</span></h1>
+        <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Baby Checklist: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1571.01 value)</span></h1>
         <!-- Last sentence starts on a new line on medium viewports and larger -->
         <p class="lead mb-0 mx-3">Click on links to jump to item descriptions. Сheck items you already own. <span class="d-md-block">Total value doesn't include optional items.</span></p>
       </div>
@@ -209,7 +209,7 @@
                 <li><div><input type="checkbox" id="swaddle-blanket-checkbox"><span> </span><a href="#swaddle-blanket">Swaddle blanket</a></div></li>
                 <li><div><input type="checkbox" id="sleep-sack-checkbox"><span> </span><a href="#sleep-sack">Sleep sack</a></div></li>
                 <li><div><input type="checkbox" id="pacifier-checkbox"><span> </span><a href="#pacifier">Pacifier x2</a></div></li>
-                <li><div><input type="checkbox" id="bouncer-checkbox"><span> </span><a href="#bouncer">Bouncer, rocker or swing</a></div></li>
+                <li><div><input type="checkbox" id="swing-checkbox"><span> </span><a href="#bouncer">Bouncer, rocker or swing</a></div></li>
                 <li><div><input type="checkbox" id="bassinet-checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bed.svg" height="64px" alt="Crib Icon">
@@ -230,7 +230,7 @@
                 <li><div><input type="checkbox" id="sterilizer-checkbox"><span> </span><a href="#sterilizer">Sterilizer</a></div></li>
                 <li><div><input type="checkbox" id="brush-checkbox"><span> </span><a href="#brush">Baby bottle brush</a></div></li>
                 <li><div><input type="checkbox" id="basket-checkbox"><span> </span><a href="#basket">Dishwasher basket</a></div></li>
-                <li><div><input type="checkbox" id="burp-clothes-checkbox"><span> </span><a href="#burp-cloths">Burp cloths/receiving blankets</a></div></li>
+                <li><div><input type="checkbox" id="burp-cloths-checkbox"><span> </span><a href="#burp-cloths">Burp cloths/receiving blankets</a></div></li>
                 <li><div><input type="checkbox" id="nipple-cream-checkbox"><span> </span><a href="#nipple-cream">Nipple cream</a></div></li>
               </ul>
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bottle.svg" height="64px" alt="Bottle Icon">
@@ -247,8 +247,8 @@
                 <li><div><input type="checkbox" id="changing-pad-checkbox"><span> </span><a href="#changing-pad">Changing pad</a></div></li>
                 <li><div><input type="checkbox" id="pad-cover-checkbox"><span> </span><a href="#pad-cover">Changing pad cover</a></div></li>
                 <li><div><input type="checkbox" id="waterproof-pads-checkbox"><span> </span><a href="#waterproof-mats">Waterproof mats</a></div></li>
-                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers">Diapers - size Newborn</a></div></li>
-                <li><div><input type="checkbox" id="diapers-checkbox"><span> </span><a href="#diapers">Diapers - size 1</a></div></li>
+                <li><div><input type="checkbox" id="diapers-newborn-checkbox"><span> </span><a href="#diapers">Diapers - size Newborn</a></div></li>
+                <li><div><input type="checkbox" id="diapers-1-checkbox"><span> </span><a href="#diapers">Diapers - size 1</a></div></li>
                 <li><div><input type="checkbox" id="wipes-checkbox"><span> </span><a href="#wipes">Baby wipes</a></div></li>
                 <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-tub"><i> Optional: wipe holder</i></a></div></li>
                 <li><div><input type="checkbox" id="diaper-cream-checkbox"><span> </span><a href="#diaper-cream">Diaper rash ointment</a></div></li>
@@ -511,7 +511,7 @@
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
           <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
           <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $240.27, Amazon.com</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $249.96, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Canton-Convertible-Bianca/dp/B06XPBNRH7', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
