Edited item names in cards.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -147,7 +147,7 @@
                 <li><div><input type="checkbox" id="stroller-checkbox"><span> </span><a href="#travel-system">Car Seat Carrier/Stroller</a></div></li>
                 <li><div><input type="checkbox" id="diaper-backpack-checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
                 <li><div><input type="checkbox" id="blanket-checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
-                <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
+                <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades">Car shades & mirror</a></div></li>
               </ul>
 
               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/stroller-full.svg" height="64px" alt="Stroller Icon">
@@ -163,9 +163,9 @@
             <div class="card-body">
               <ul class="list-unstyled mt-2 mb-2">
                 <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size Newborn - x5</a></div></li>
-                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size Newborn - x3</a></div></li>
+                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Sleep & Plays - size Newborn - x3</a></div></li>
                 <li><div><input type="checkbox" class="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size 1 month - x5</a></div></li>
-                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size 1 month - x3</a></div></li>
+                <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Sleep & Plays - size 1 month - x3</a></div></li>
                 <li><div><input type="checkbox" class="winter-clothes"><span> </span><a href="#clothes"><i>Optional: jacket, hat, soft shoes</i></a></div></li>
                </ul>
                <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/rompers-girl.svg" height="64px" alt="Onesie Icon">
@@ -250,7 +250,7 @@
                 <li><div><input type="checkbox" id="diapers-newborn-checkbox"><span> </span><a href="#diapers">Diapers - size Newborn</a></div></li>
                 <li><div><input type="checkbox" id="diapers-1-checkbox"><span> </span><a href="#diapers">Diapers - size 1</a></div></li>
                 <li><div><input type="checkbox" id="wipes-checkbox"><span> </span><a href="#wipes">Baby wipes</a></div></li>
-                <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-tub"><i> Optional: wipe holder</i></a></div></li>
+                <li><div><input type="checkbox" id="wipe-holder-checkbox"><span> </span><a href="#wipe-tub">Wipe holder</a></div></li>
                 <li><div><input type="checkbox" id="diaper-cream-checkbox"><span> </span><a href="#diaper-cream">Diaper rash ointment</a></div></li>
                 <li><div><input type="checkbox" id="diaper-pail-checkbox"><span> </span><a href="#diaper-pail">Diaper pail</a></div></li>
               </ul>
