--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -522,23 +522,46 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-lg-7 mb-4">
+      <div class="featurette">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="mattress"></span>Crib mattress, mattress cover and sheets: <span class="text-muted">full set</span></h2>
           <p class="lead">The crib won’t work until you have a mattress and a sheet. Usually a mattress is not included with a crib for the same reason an adult mattress won’t come with a bed – there are tons of options and the price range is huge. The safety guidelines call for a firm mattress that fits snugly into the crib (to prevent suffocation risk), but less expensive mattresses meet these requirements all the same. I would also recommend a waterproof cover for the mattress, so that cleaning is never a problem. As for sheets, any fitted sheets should do – yes, there are so many cute designs! Depending on the baby you may find yourself changing sheets as rarely as once in 2 weeks, or as often as every day. But since you don’t know how the routine will look like yet – 2 sheets and 2 waterproof covers would do for starters.</p>
-          <div><span class="font-weight-bold">Delta Children Twinkle Stars Mattress:</span> $54.99, Amazon.com</div>
-          
-          <!-- Needs re-designing and an image-->
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
-          <p class="lead"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Organic-Cotton-Waterproof-Fitted-Crib/dp/B01865W6R0', '_blank'); return false;">Check it up!</button>
-          <p class="lead"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Fitted-Toddler-Jersey-Chevron-Elys/dp/B06W5G7KC1', '_blank'); return false;">Check it up!</button>
+      </div>
+
+      <div class="row featurette">
+        <div class="col-lg-4 mb-4">
+          <img src="../static/img/DeltaCribMattress2.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
         </div>
-        <div class="col-lg-5 text-center">
-          <img src="../static/img/Canton4in1ConvertibleCrib.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
+        <div class="col-lg-4 mb-4">
+          <img src="../static/img/FittedCribPad.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
+        </div>
+        <div class="col-lg-4 mb-4">
+          <img src="../static/img/CribSheetSet.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
         </div>
       </div>
+
+      <div>
+          <p class="lead on-one-line"><span class="font-weight-bold">Delta Children Twinkle Stars Mattress:</span> $54.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm mb-2" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
+          <br>
+          <p class="lead on-one-line"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Organic-Cotton-Waterproof-Fitted-Crib/dp/B01865W6R0', '_blank'); return false;">Check it up!</button>
+          <br>
+          <p class="lead on-one-line"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Fitted-Toddler-Jersey-Chevron-Elys/dp/B06W5G7KC1', '_blank'); return false;">Check it up!</button>
+      </div>
+
+      
+<!--
+        <p class="font-weight-bold">Delta Children Twinkle Stars Mattress:</span> $54.99, Amazon.com</p>
+        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
+        <p class="lead"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
+        <br>
+        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Organic-Cotton-Waterproof-Fitted-Crib/dp/B01865W6R0', '_blank'); return false;">Check it up!</button>
+        <p class="lead"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
+        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Fitted-Toddler-Jersey-Chevron-Elys/dp/B06W5G7KC1', '_blank'); return false;">Check it up!</button>
+      </div>
+-->
+
 
       <hr class="featurette-divider">
 
