--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -59,10 +59,12 @@
           </li>
           -->
         </ul>
+        <!--
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-pink my-2 my-sm-0" type="submit">Search</button>
         </form>
+        -->
       </div>
     </nav>
   </header>
@@ -910,7 +912,7 @@
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; Nataliya Pogodina with ♡ &middot;  2019  &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; Made by Nataliya Pogodina with ♡ &middot;  2019  <!--&middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>--></p>
     </footer>
 
   </main>
